[package]
name = "meowstore"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
crawler = { path = "../crawler" }
db = { version = "0.1.0", path = "../db" }
db_http_server = { path = "../db_http_server" }
inquire = "0.7.5"
serde = "1.0.204"
tokio = "1.39.2"
toml = "0.8.19"
warp = "0.3.7"
