[package]
name = "db_http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rs2s = { path = "../../rs2s/rs2s" }
http_input = { path = "../../rs2s/http_input" }
lib = { path = "../db_http_server_lib", package = "db_http_server_lib" }
hyper-util = { version = "0.1.6", features = ["full"] }
hyper-tls = "0.6.0"
reqwest = "0.12.5"
db = { path = "../db" }
serde = "1.0.204"
serde_json = "1.0.120"
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
http = "0.2.12"
http-body-util = "0.1"
hyper = "0.14.30"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
rand = "0.8.5"
meilisearch-sdk = "0.27.0"
